Details
-
Bug
-
Resolution: Fixed
-
Major
-
72,495
Description
An unknown revision introduced a regression in depends (dependency walker) v2.2.6000
When loading any application in depends, the following exception occurs:
Access violation - code c0000005 (first chance)
|
First chance exceptions are reported before any exception handling.
|
This exception may be expected and handled.
|
001b:004399e6 c74008ffffff7f mov dword ptr [eax+8],7FFFFFFFh ({{_AfxLayoutRowCol}})
|
kd> .reload /user
|
Loading User Symbols
|
.........................................
|
*** ERROR: Module load completed but symbols could not be loaded for depends.exe
|
kd> k
|
ChildEBP RetAddr
|
WARNING: Stack unwind information not available. Following frames may be wrong.
|
0012b9fc 0043adf5 depends+0x399e6 ({{CSplitterWnd::RecalcLayout}})
|
0012ba78 0043ac24 depends+0x3adf5 ({{CSplitterWnd::OnSize}})
|
0012bb3c 00434890 depends+0x3ac24 ({{CWnd::WindowProc}})
|
0012bb5c 00436c6d depends+0x34890 ({{AfxCallWndProc}})
|
0012bbc4 00436cf4 depends+0x36c6d ({{AfxWndProc}})
|
0012bbe4 7c55089a depends+0x36cf4
|
0012bc14 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012bcb0 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012bd24 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012be20 7c52dc28 ntdll!KiUserCallbackDispatcher+0x2e
|
0012be88 7aa0ffe4 USER32!RealDefWindowProcA+0x438 [r:\src\trunk\reactos\win32ss\user\user32\windows\defwnd.c @ 1031]
|
0012bea0 7c52ce74 uxtheme!ThemeDefWindowProcA+0x24 [r:\src\trunk\reactos\dll\win32\uxtheme\themehooks.c @ 210]
|
0012bee8 7c55089a USER32!DefWindowProcA+0xa4 [r:\src\trunk\reactos\win32ss\user\user32\windows\defwnd.c @ 1226]
|
0012bf18 7c542573 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012bfb8 7c544d05 USER32!IntCallWindowProcA+0x223 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1587]
|
0012bfe0 00434797 USER32!CallWindowProcA+0x95 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1744]
|
0012c000 004348a7 depends+0x34797 ({{CWnd::WindowProc}})
|
0012c01c 00436c6d depends+0x348a7 ({{AfxCallWndProc}})
|
0012c084 00436cf4 depends+0x36c6d ({{AfxWndProc}})
|
0012c0a4 7c55089a depends+0x36cf4
|
0012c0d4 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012c170 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012c1e4 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012c248 00436904 ntdll!KiUserCallbackDispatcher+0x2e
|
0012c284 0043268d depends+0x36904 ({{CFrameWnd::RecalcLayout}})
|
0012c2c4 00432722 depends+0x3268d ({{CFrameWnd::OnSize}})
|
0012c384 00434890 depends+0x32722 ({{CWnd::WindowProc}})
|
0012c3a4 00436c6d depends+0x34890 ({{AfxCallWndProc}})
|
0012c40c 00436cf4 depends+0x36c6d ({{AfxWndProc}})
|
0012c42c 7c55089a depends+0x36cf4
|
0012c45c 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012c4f8 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012c56c 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012c668 7c52dc28 ntdll!KiUserCallbackDispatcher+0x2e
|
0012c6d0 7aa0ffe4 USER32!RealDefWindowProcA+0x438 [r:\src\trunk\reactos\win32ss\user\user32\windows\defwnd.c @ 1031]
|
0012c6e8 7c52ce74 uxtheme!ThemeDefWindowProcA+0x24 [r:\src\trunk\reactos\dll\win32\uxtheme\themehooks.c @ 210]
|
0012c730 7c539edf USER32!DefWindowProcA+0xa4 [r:\src\trunk\reactos\win32ss\user\user32\windows\defwnd.c @ 1226]
|
0012c754 0042fa8c USER32!DefMDIChildProcA+0x19f [r:\src\trunk\reactos\win32ss\user\user32\windows\mdi.c @ 1540]
|
0012c784 00436c6d depends+0x2fa8c ({{AfxCallWndProc}})
|
0012c7ec 00436cf4 depends+0x36c6d ({{AfxWndProc}})
|
0012c80c 7c55089a depends+0x36cf4
|
0012c83c 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012c8d8 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012c94c 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012c9c4 00434741 ntdll!KiUserCallbackDispatcher+0x2e
|
0012c9f4 00439d2d depends+0x34741 ({{PROBABLY! CSplitterWnd::OnNcCreate}})
|
0012caa0 00434890 depends+0x39d2d ({{CWnd::WindowProc}})
|
0012cac0 00436c6d depends+0x34890 ({{AfxCallWndProc}})
|
0012cb28 00436cf4 depends+0x36c6d ({{AfxWndProc}})
|
0012cb48 7c55089a depends+0x36cf4
|
0012cb78 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012cc14 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012cc88 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012ce00 7c54c24c ntdll!KiUserCallbackDispatcher+0x2e
|
0012ce80 0042fd3c USER32!CreateWindowExA+0x32c [r:\src\trunk\reactos\win32ss\user\user32\windows\window.c @ 441]
|
0012ceec 00438319 depends+0x2fd3c ({{PROBABLY! CWnd::CreateEx}})
|
0012cf5c 00439c36 depends+0x38319 ({{CSplitterWnd::CreateCommon}})
|
0012cfb8 0043c000 depends+0x39c36 ({{CSplitterWnd::CreateStatic}})
|
0012cfd4 004012dc depends+0x3c000
|
0012d004 0043163a depends+0x12dc ({{CFrameWnd::OnCreateHelper}})
|
0012d0b8 00434890 depends+0x3163a ({{CWnd::WindowProc}})
|
0012d0d8 00436c6d depends+0x34890 ({{AfxCallWndProc}})
|
0012d140 00436cf4 depends+0x36c6d ({{AfxWndProc}})
|
0012d160 7c55089a depends+0x36cf4
|
0012d190 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012d22c 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012d2a0 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012d44c 7c54c24c ntdll!KiUserCallbackDispatcher+0x2e
|
0012d4cc 7c53abdf USER32!CreateWindowExA+0x32c [r:\src\trunk\reactos\win32ss\user\user32\windows\window.c @ 441]
|
0012d558 7c5391ad USER32!MDIClientWndProc_common+0x42f [r:\src\trunk\reactos\win32ss\user\user32\windows\mdi.c @ 1208]
|
0012d574 7c55089a USER32!MDIClientWndProcA+0x2d [r:\src\trunk\reactos\win32ss\user\user32\windows\mdi.c @ 1360]
|
0012d5a4 7c542573 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012d644 7c545aff USER32!IntCallWindowProcA+0x223 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1587]
|
0012d674 7c54655d USER32!IntCallMessageProc+0x1cf [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1719]
|
0012d6f8 00430385 USER32!SendMessageA+0x10d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2398]
|
0012d770 00430a1b depends+0x30385 ({{CMDIChildWnd::LoadFrame}})
|
0012d7b0 0044d396 depends+0x30a1b ({{CDocTemplate::CreateNewFrame}})
|
0012d7e4 00441226 depends+0x4d396
|
0012d814 0044dafe depends+0x41226 ({{CDocManager::OpenDocumentFile}})
|
0012d8f8 7c92291c depends+0x4dafe
|
0012d9f8 7becc066 ntdll!LdrGetDllHandle+0x1c [r:\src\trunk\reactos\dll\ntdll\ldr\ldrapi.c @ 809]
|
0012da0c 7becaffe comdlg32!MemFree+0x16 [r:\src\trunk\reactos\dll\win32\comdlg32\filedlg.c @ 4000]
|
0012dae8 00136384 comdlg32!GetFileDialog95A+0x44e [r:\src\trunk\reactos\dll\win32\comdlg32\filedlg.c @ 456]
|
00136188 00000000 0x136384
|
after continuing once:
(R:\src\trunk\reactos\win32ss\user\ntuser\callback.c:349) err: Error Callback to User space Status c0000423 Message 5
|
Access violation - code c0000005 (first chance)
|
First chance exceptions are reported before any exception handling.
|
This exception may be expected and handled.
|
depends+0x399e6:
|
001b:004399e6 c74008ffffff7f mov dword ptr [eax+8],7FFFFFFFh
|
kd> k
|
ChildEBP RetAddr
|
WARNING: Stack unwind information not available. Following frames may be wrong.
|
0012c9b4 0043adf5 depends+0x399e6
|
0012ca30 0043ac24 depends+0x3adf5
|
0012caf4 00434890 depends+0x3ac24
|
0012cb14 00436c6d depends+0x34890
|
0012cb7c 00436cf4 depends+0x36c6d
|
0012cb9c 7c55089a depends+0x36cf4
|
0012cbcc 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012cc68 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012ccdc 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012ce00 7c54c24c ntdll!KiUserCallbackDispatcher+0x2e
|
0012ce80 0042fd3c USER32!CreateWindowExA+0x32c [r:\src\trunk\reactos\win32ss\user\user32\windows\window.c @ 441]
|
0012ceec 00438319 depends+0x2fd3c
|
0012cf5c 00439c36 depends+0x38319
|
0012cfb8 0043c000 depends+0x39c36
|
0012cfd4 004012dc depends+0x3c000
|
0012d004 0043163a depends+0x12dc
|
0012d0b8 00434890 depends+0x3163a
|
0012d0d8 00436c6d depends+0x34890
|
0012d140 00436cf4 depends+0x36c6d
|
0012d160 7c55089a depends+0x36cf4
|
0012d190 7c542972 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012d22c 7c54705d USER32!IntCallWindowProcW+0x1f2 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1466]
|
0012d2a0 7c92c3a1 USER32!User32CallWindowProcFromKernel+0x23d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2921]
|
0012d44c 7c54c24c ntdll!KiUserCallbackDispatcher+0x2e
|
0012d4cc 7c53abdf USER32!CreateWindowExA+0x32c [r:\src\trunk\reactos\win32ss\user\user32\windows\window.c @ 441]
|
0012d558 7c5391ad USER32!MDIClientWndProc_common+0x42f [r:\src\trunk\reactos\win32ss\user\user32\windows\mdi.c @ 1208]
|
0012d574 7c55089a USER32!MDIClientWndProcA+0x2d [r:\src\trunk\reactos\win32ss\user\user32\windows\mdi.c @ 1360]
|
0012d5a4 7c542573 USER32!CALL_EXTERN_WNDPROC+0x1a
|
0012d644 7c545aff USER32!IntCallWindowProcA+0x223 [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1587]
|
0012d674 7c54655d USER32!IntCallMessageProc+0x1cf [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 1719]
|
0012d6f8 00430385 USER32!SendMessageA+0x10d [r:\src\trunk\reactos\win32ss\user\user32\windows\message.c @ 2398]
|
0012d770 00430a1b depends+0x30385
|
0012d7b0 0044d396 depends+0x30a1b
|
0012d7e4 00441226 depends+0x4d396
|
0012d814 0044dafe depends+0x41226
|
0012d8f8 7c92291c depends+0x4dafe
|
0012d9f8 7becc066 ntdll!LdrGetDllHandle+0x1c [r:\src\trunk\reactos\dll\ntdll\ldr\ldrapi.c @ 809]
|
0012da0c 7becaffe comdlg32!MemFree+0x16 [r:\src\trunk\reactos\dll\win32\comdlg32\filedlg.c @ 4000]
|
0012dae8 00136384 comdlg32!GetFileDialog95A+0x44e [r:\src\trunk\reactos\dll\win32\comdlg32\filedlg.c @ 456]
|
00136188 00000000 0x136384
|
After continuing a 2nd time:

Attachments
Issue Links
- blocks
-
CORE-11915 [WIN32SS/USER32] Pseudo-Regressions of r72495 EPIC
-
- Open
-
-
CORE-10173 PAGE_EXECUTE_WRITECOPY does not actually copy memory before writing to it.
-
- Resolved
-
-
CORE-6391 csrss: Crash in Dependency Walker when profiling with DllMain calls for process attach/detach logging
-
- Resolved
-
- is duplicated by
-
CORE-12161 OpenMPT: Unhandled exception in OpenMPT\mptrack.exe
-
- Resolved
-
-
CORE-12982 OCR CuneiForm crashes with: The instruction at "0x5f45cc8d" referenced memory at "0x00000004". The memory could not be "read". -74232-dbg
-
- Resolved
-
-
CORE-15033 An internal error (0xC0000005) has occurred. Dependency Walker cannot continue to run.
-
- Resolved
-
-
CORE-15976 Dependency Walker (depends.exe) crashes when opening anything.
-
- Resolved
-
-
CORE-14939 Source SDK Hammer 3.5/3.4 Crashes when you Open New Project.
-
- Resolved
-
-
CORE-12395 Regression: WinDirstat 1.1.2 from rapps crashes right after startup with unhandled exception
-
- Closed
-