[USER32_APITEST] Add tests to validate messages sent during window creation / modifying of styles. CORE-12052

svn path=/trunk/; revision=74689